# NammaPark-Intel

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  README.md  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  vercel.json
api/: __init__.py  database.py  dependencies.py  main.py  serving.py
api/middleware/: __init__.py  cache.py  circuit_breaker.py
api/routers/: anomalies.py  clusters.py  commander.py  hotspots.py  ingestion.py  patrol.py  pipeline.py
api/schemas/: cluster.py  patrol.py  prediction.py
api/tests/: test_fallback_api.py
backend/node/: auth.js  fallback-store.js  index.js
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  format.ts  proxy.ts
frontend/types/: api.ts
ml/: __init__.py
ml/config/: config.yaml  settings.py
ml/data/: schema.sql
ml/features/: network.py  spatial.py  temporal.py
ml/models/: anomaly_model.py  neural_risk_model.py  risk_model.py  survival_model.py  vrp_router.py
ml/pipeline/: db_seed.py  db_setup.py  download_graph.py  etl.py  evaluate.py  predict.py  train.py  train_neural.py
ml/tests/: test_properties.py
public/fallback/: anomalies.json  clusters.json  patrol_routes.json  (+1 more)
scripts/: demo_run.sh  warmup.sh
tests/: test_evaluate.py  test_neural_risk_model.py  test_phase1_core.py  test_temporal_features.py
tools/: build_demo_data.py  check_auth_module.mjs  check_demo_data.py  check_map_roads.py  export_map_roads.py  run_uploaded_pipeline.py
(+33 files in other folders)
